--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}SkillSwap{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <header>
-        <h1>SkillSwap Header</h1>
+        <nav class="navbar">
+            <div class="logo">
+                <p> 
+                    skillSwap
+                </p>
+            </div>
+            <div>
+                <input id="searchbar" type="text" placeholder="Search"> 
+            </div>
+            <div>
+                <i class="bi bi-person-circle"></i>
+            </div>
+
+        </nav>
     </header>
     
     <main>
         {% block content %}
+
+
         {% endblock %}
     </main>
-    
 </body>
 </html>
