--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,9 @@
+:root{
+    --sidepanes: rgb(243,249,250);
+    --overallgray: rgb(238,235,235);
+    --websiteblue: rgb(52,119,141);
+}
+
 .navbar{
     outline: solid;
     width: 100%;
@@ -23,7 +29,88 @@
     width: 600px;
 }
 
-.bi.bi-person-circle{
+#nav-pfp{
     color: white;
     font-size: 30px;
 }
+
+/* _____________________________________________________________ */
+
+.main-body{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+.main-nav{
+    padding: 30px;
+    width: 25%;
+    background-color: var(--sidepanes);
+    color: black;
+}
+.main-nav a{
+    color: black;
+}
+.side-tabs{
+    display: flex;
+    flex-direction: row;
+    font-size: 18px;
+    padding-top: 20px;
+}
+
+.main-cont{
+    width: 55%;
+}
+
+.main-recomm{
+    width: 20%;
+    background-color: var(--sidepanes);
+
+}
+
+.post{
+    background-color: var(--overallgray);
+    border-radius: 10px;
+    margin: 20px;
+    padding: 10px;
+}
+
+#textpostarea{
+    border-radius: 10px;
+    border: none;
+    margin: 7px;
+    width: 700px;
+    height: 100px;
+}
+
+.post-text-btn{
+    display: flex;
+    flex-direction: row;
+    align-items:end;
+}
+
+#post-button{
+    background-color: var(--websiteblue);
+    height: 30px;
+    width:70px;
+    margin-bottom: 10px;
+}
+
+#post-content{
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.post-btns{
+    font-size: 20px;
+    margin-right: 620px;
+    margin-left: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
