--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/style.css">
+
 </head>
 <body>
     <header>
@@ -20,17 +21,92 @@
                 <input id="searchbar" type="text" placeholder="Search"> 
             </div>
             <div>
-                <i class="bi bi-person-circle"></i>
+                <i id="nav-pfp" class="bi bi-person-circle"></i>
             </div>
-
         </nav>
     </header>
-    
     <main>
-        {% block content %}
 
+    <div class="main-body">
+        <div class="main-nav">
+            <nav class="nav flex-column">
+                <div class="side-tabs">
+                    <a class="nav-link active" href="#">
+                        <i class="bi bi-house-door"></i>
+                        <span> Home</span>
 
-        {% endblock %}
+                    </a>
+                </div>
+                <div class="side-tabs">
+                    <a class="nav-link" href="#">
+                        <i class="bi bi-person-circle"></i>
+                        <span> Profile</span>
+                    </a>
+                </div>
+
+                <div class="side-tabs">
+                    <a class="nav-link" href="#">
+                        <i class="bi bi-people"></i>
+                        <span> Friends</span>
+                    </a>
+                </div>
+
+                <div class="side-tabs">
+                    <a class="nav-link" href="#">
+                        <i class="bi bi-gear"></i>
+                        <span> Settings</span>
+                    </a>
+                </div>
+                
+            </nav>
+        </div>
+
+        <div class="main-cont">
+            <div class="post">
+                <i class="bi bi-person-circle"></i>
+                <span> jinja variable </span>
+                <div class="post-text-btn">
+                    <textarea id="textpostarea" placeholder="Type here"></textarea>
+                    <button type="button" class="btn btn-primary btn-sm" id="post-button">Post</button>
+                </div>
+            </div>
+            <div class="post">
+                <i class="bi bi-person-circle"></i>
+                <span> jinja variable </span>
+                <div class="post-area">
+                    <p id="post-content">
+                        jinja variable | Here goes post content
+                    </p>
+                    <div class="post-btns">
+                        <i class="bi bi-heart"></i>
+                        <i class="bi bi-chat-square-text"></i>
+                        <i class="bi bi-share"></i>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+
+        <div class="main-recomm">
+            <div class="recomm-container">
+                <div class="recomm-user">
+                    <i class="bi bi-person-circle"></i>
+                    <span>username</span>
+                </div>
+                <div class="recomm-text">
+                    <p class="recomm-content">Grade Year: jinja variable</p>
+                    <p class="recomm-content">Concentration: jinja variable</p>
+                    <p class="recomm-content">Completed: jinja variable</p>
+                    <p class="recomm-content">Enrolled: jinja variable</p>
+                </div>     
+            </div>
+        </div>
+    </div>
     </main>
+    <footer>
+        skillSwap ©
+    </footer>
 </body>
-</html>
+</html> 
+<!-- {% block content %}
+        {% endblock %} -->
