--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,43 @@
 {% extends "_layout.html" %}
 
-{% block title %}
-    SkillSwap|HomePage
+
+{% block maincontent %}
+    <div class="post">
+        <i class="bi bi-person-circle"></i>
+        <span> jinja variable </span>
+        <div class="post-text-btn">
+            <textarea id="textpostarea" placeholder="Type here"></textarea>
+            <button type="button" class="btn btn-primary btn-sm" id="post-button">Post</button>
+        </div>
+    </div>
+    <div class="post">
+        <i class="bi bi-person-circle"></i>
+        <span> jinja variable </span>
+        <div class="post-area">
+            <p id="post-content">
+                jinja variable | Here goes post content
+            </p>
+            <div class="post-btns">
+                <i class="bi bi-heart"></i>
+                <i class="bi bi-chat-square-text"></i>
+                <i class="bi bi-share"></i>
+            </div>
+            
+        </div>
+    </div>
 {% endblock %}
 
-{% block content %}
-    <h2>This is SkillSwap Heading for home page</h2>
-    <p>Please edit this page!!</p>
+{% block rightcontent %}
+    <div class="recomm-container">
+        <div class="recomm-user">
+            <i class="bi bi-person-circle"></i>
+            <span>username</span>
+        </div>
+        <div class="recomm-text">
+            <p class="recomm-content">Grade Year: jinja variable</p>
+            <p class="recomm-content">Concentration: jinja variable</p>
+            <p class="recomm-content">Completed: jinja variable</p>
+            <p class="recomm-content">Enrolled: jinja variable</p>
+        </div>    
+    </div>
 {% endblock %}
