--- a/static/style.css
+++ b/static/style.css
@@ -8,73 +8,42 @@ h1, h2, h3, h4, h5, h6 {
     color: #444444;
 }
 
-.bg-steel {
-    background-color: #5f788a;
+
+/* Page layout for the posts */
+.col-md-8{
+    border-left: 2px lightgray solid;
+    border-right: 2px lightgray solid;
+    border-radius: 5px;
+    height: 100vh;
 }
 
-.site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+/* For individual posts */
+.media-body a{
+    text-decoration: none;
+    color: black;
+}
+.media-body:hover{
+    border-radius: 5px;
+    cursor: pointer;
+    border: 2px solid #333333;
 }
 
-.site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+.button-functions button:hover{
+    background-color: darkgray;
 }
 
-.site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
+.post-information a, .text-muted{
+    font-size: 0.75rem;
 }
 
-.content-section {
-    background: #ffffff;
-    padding: 10px 20px;
-    border: 1px solid #dddddd;
+.post-information a:hover{
+    text-decoration: underline;
+}
+
+.media-body{
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: lightgray;
     border-radius: 3px;
-    margin-bottom: 20px;
-}
-
-.article-title {
-    color: #444444;
-}
-
-a.article-title:hover {
-    color: #428bca;
-    text-decoration: none;
-}
-
-.article-content {
-    white-space: pre-line;
-}
-
-.article-img {
-    height: 65px;
-    width: 65px;
-    margin-right: 16px;
-}
-
-.article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
-}
-
-.article-metadata a:hover {
-    color: #333;
-    text-decoration: none;
-}
-
-.article-svg {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-}
-
-.account-img {
-    height: 125px;
-    width: 125px;
-    margin-right: 20px;
-    margin-bottom: 16px;
-}
-
-.account-heading {
-    font-size: 2.5rem;
 }
