--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -55,6 +55,7 @@
         <input type="text" placeholder="Username" required>
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
+        <input type="password" placeholder="Confirm Password" required>
         <button type="submit">Sign Up</button>
     </form>
 </div>
