Adding Sang's features into the main because of merge complications

--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@
 .main-body{
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: 100vh;
 }
 
 .main-nav{
@@ -144,7 +144,9 @@ footer{
     color: white;
     text-align: center;
     padding: 10px;
-
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 /* Styling for the sign up page */
@@ -187,3 +189,31 @@ footer{
 }
 .sign-up:hover {
     background-color: #0056a3;
+}
+
+/* for the posts */
+
+.post-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    padding: 0.25rem;
+}
+
+.post-header i {
+    margin-right: 0.5rem;
+}
+
+.poster{
+    margin: 0;
+    font-weight: bold;
+    padding-bottom: 0.25rem;
+    margin-right: auto;
+}
+
+.post-date{
+    font-size: 0.75rem;
+    color: gray;
+}
