--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,27 @@
             <button type="button" class="btn btn-primary btn-sm" id="post-button">Post</button>
         </div>
     </div>
-    <div class="post">
-        <i class="bi bi-person-circle"></i>
-        <span> jinja variable </span>
-        <div class="post-area">
-            <p id="post-content">
-                jinja variable | Here goes post content
-            </p>
-            <div class="post-btns">
-                <i class="bi bi-heart"></i>
-                <i class="bi bi-chat-square-text"></i>
-                <i class="bi bi-share"></i>
+    {% for post in posts %}
+        <div class="post">
+            <div class="post-header">
+                <i class="bi bi-person-circle"></i>
+                <h6 class="poster">{{ post.author }}</h6>
+                <p class="post-date">{{ post.date_posted }}</p>
             </div>
-            
+            <div class="post-area">
+                <h3 class="post-title">{{ post.title }}</h3>
+                <p id="post-content">
+                    {{ post.content }}
+                </p>
+                <div class="post-btns">
+                    <i class="bi bi-heart"></i>
+                    <i class="bi bi-chat-square-text"></i>
+                    <i class="bi bi-share"></i>
+                </div>
+            </div>
         </div>
-    </div>
+    {% endfor %}
+
 {% endblock %}
 
 {% block rightcontent %}
