Changing a few things and relating stuff to each other slowly but surely

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -31,24 +31,29 @@
         <div class="main-nav">
             <nav class="nav flex-column">
                 <div class="side-tabs">
-                    <a class="nav-link active" href="#">
-                        <i class="bi bi-house-door"></i>
-                        <span> Home</span>
-
-                    </a>
+                    <form action="/home-page" method="GET">
+                        <a class="nav-link active" href="/home-page">
+                            <i class="bi bi-house-door"></i>
+                            <span> Home</span>
+                        </a>
+                    </form>
                 </div>
                 <div class="side-tabs">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-person-circle"></i>
-                        <span> Profile</span>
-                    </a>
+                    <form action="/profile-page" method="GET">
+                        <a class="nav-link" href="/profile-page">
+                            <i class="bi bi-person-circle"></i>
+                            <span> Profile</span>
+                        </a>
+                    </form>
                 </div>
 
                 <div class="side-tabs">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-people"></i>
-                        <span> Friends</span>
-                    </a>
+                    <form action="/friends-page" method="GET">
+                        <a class="nav-link" href="/friends-page">
+                            <i class="bi bi-people"></i>
+                            <span> Friends</span>
+                        </a>
+                    </form>
                 </div>
 
                 <div class="side-tabs">
