--- a/templates/friends_page.html
+++ b/templates/friends_page.html
@@ -4,7 +4,7 @@
     SkillSwap|Friends
 {% endblock %}
 
-{% block content %}
+{% block maincontent %}
     <h2>Friends</h2>
     <p>Listed below is where you can view all your friends</p>
 {% endblock %}
