--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -12,10 +12,16 @@
     <div class="signup-container">
         <h2>Sign Up</h2>
         <form class="signing-up" action="/signing-up" method="post">
-            <input type="text" placeholder="Username" required>
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
-            <input type="password" placeholder="Confirm Password" required>
+
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" name="username" required>
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password" required>
+            <label for="confirm-password" class="form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="confirm-password" name="confirm-password" required>
+
             <button class="sign-up" type="submit">Sign Up</button>
         </form>
     </div>
