--- a/templates/friendsPage.html
+++ b/templates/friendsPage.html
@@ -7,4 +7,31 @@
 {% block content %}
     <h2>Friends</h2>
     <p>Listed below is where you can view all your friends</p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="people-nearby">
+                    {% for friend in friend_list %}
+                    <div class="nearby-user">
+                        <div class="row">
+                            <div class="col-md-2 col-sm-2">
+                                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user" class="profile-photo-lg">
+                            </div>
+                            <div class="col-md-7 col-sm-7">
+                                <h5><a href="#" class="profile-link">{{ friend.name }}</a></h5>
+                                <p>{{ friend.occupation }}</p>
+                                <p class="text-muted">{{ friend.distance }}</p>
+                            </div>
+                            <div class="col-md-3 col-sm-3">
+                                <button class="btn btn-primary pull-right">Add Friend</button>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+    
 {% endblock %}
