--- a/static/style.css
+++ b/static/style.css
@@ -217,3 +217,11 @@ footer{
     font-size: 0.75rem;
     color: gray;
 }
+
+
+
+/* For alert message */
+.alert-message {
+    color: red;
+    font-size: 0.75rem;
+}
