--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -11,7 +11,7 @@
         <h3 class="welcome-message">
             {% for message in get_flashed_messages() %}
             
-                {% if "Account created" in message %}
+                {% if "Account created" in message or "logged out" in message %}
                     <div class="alert alert-warning alert-dismissible fade show" role="alert">
                         {{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
