--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="logo">
                 <p> 
-                    skillSwap
+                    SkillSwap
                 </p>
             </div>
             <div>
