--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -52,6 +52,11 @@
                 </div>
 
                 <div class="side-tabs">
+                    <a class="nav-link" href="/user-posts">
+                        <span> My Posts</span>
+                    </a>
+                </div>
+                <div class="side-tabs">
                     <a class="nav-link" href="/settings-page">
                         <span> Settings</span>
                     </a>
