--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,7 +4,7 @@
 {% block maincontent %}
     <div class="post">
         <i class="bi bi-person-circle"></i>
-        <span> {{ current_user }} </span>
+        <span> {{ current_user.username }} </span>
         <form action="/user-post" method="post">
             <div class="post-text-btn">
                 <textarea name="post-content" id="textpostarea" placeholder="Type here" maxlength="255"></textarea>
@@ -20,6 +20,15 @@
                 <i class="bi bi-person-circle"></i>
                 <h6 class="poster">{{ post.author }}</h6>
                 <p class="post-date">{{ post.datetime_post }}</p>
+                {% if post.post_author_id == current_user.user_id %}
+                    <form action="/edit-post/{{ post.post_id }}" method="get">
+                        <input type="hidden" name="post_id" value="{{ post.post_id }}">
+                        <button type="submit" class="btn btn-danger btn-sm" id="delete-button">Edit</button>
+                    </form>
+                    <form action="/delete-post" method="post">
+                        <button name="delete" type="submit" class="btn btn-danger btn-sm" id="delete-button" value="{{ post.post_id }}" >Delete</button>
+                    </form>
+                {% endif %}
             </div>
             <div class="post-area">
                 <a href="/posts/{{ post.post_id }}" class="click-post">Click here to view the post</a>
