--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="side-tabs">
-                    <a class="nav-link" href="/user-posts">
+                    <a class="nav-link" href="/users-posts">
                         <span> My Posts</span>
                     </a>
                 </div>
