base for profile html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,25 @@
 {% extends "_layout.html" %}
-{% block maincontent %}
-    <p>You are in the profile page</p>
+
+{% block maincontent%}
+    <div class="profile-title">
+        <div>
+            <i id="profilepg-pfp" class="bi bi-person-circle"></i>
+        </div>
+        <div id="username-block">
+            <h1>
+            username!!
+            </h1>
+        </div>
+        <div>
+            <button id="editpfp">Edit Profile</button>
+        </div>
+    </div>
+
+
+{% endblock %}
+
+{% block rightcontent %}
+
+
+
 {% endblock %}
