Adjusting a few things like deleting posts when viewing it under My Posts tab. Also adding an edit post feature

--- a/static/style.css
+++ b/static/style.css
@@ -233,3 +233,9 @@ footer{
     color: red;
     font-size: 0.75rem;
 }
+
+/* For the edit_post page */
+.edit-post-disclaimer p{
+    font-size: 0.75rem;
+    color: gray;
+}
