--- a/templates/posts.html
+++ b/templates/posts.html
@@ -14,7 +14,9 @@
             </p>
             <div class="post-btns">
                 <i class="bi bi-heart"></i>
+                <p>{{ post.num_likes }}</p>
                 <i class="bi bi-chat-square-text"></i>
+                <p>{{ post.num_comments }}</p>
                 <i class="bi bi-share"></i>
             </div>
         </div>
