--- a/templates/users_posts.html
+++ b/templates/users_posts.html
@@ -13,9 +13,9 @@
                 {% if post.post_author_id == user.user_id %}
                     <form action="/edit-post/{{ post.post_id }}" method="get">
                         <input type="hidden" name="post_id" value="{{ post.post_id }}">
-                        <button type="submit" class="btn btn-danger btn-sm" id="delete-button">Edit</button>
+                        <button type="submit" class="btn btn-danger btn-sm" id="edit-button">Edit</button>
                     </form>
-                    <form action="/delete-post" method="post">
+                    <form action="/delete-post-from-myposts" method="post">
                         <button name="delete" type="submit" class="btn btn-danger btn-sm" id="delete-button" value="{{ post.post_id }}" >Delete</button>
                     </form>
                 {% endif %}
@@ -28,7 +28,9 @@
                 </p>
                 <div class="post-btns">
                     <i class="bi bi-heart"></i>
+                    <p>{{ post.num_likes }}</p>
                     <i class="bi bi-chat-square-text"></i>
+                    <p>{{ post.num_comments }}</p>
                     <i class="bi bi-share"></i>
                 </div>
             </div>
