finishing the functionality of comments

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -32,7 +32,7 @@
                 {% if post.post_author_id == current_user.user_id %}
                     <form action="/edit-post/{{ post.post_id }}" method="get">
                         <input type="hidden" name="post_id" value="{{ post.post_id }}">
-                        <button type="submit" class="btn btn-danger btn-sm" id="delete-button">Edit</button>
+                        <button type="submit" class="btn btn-danger btn-sm" id="edit-post-button">Edit</button>
                     </form>
                     <form action="/delete-post" method="post">
                         <button name="delete" type="submit" class="btn btn-danger btn-sm" id="delete-button" value="{{ post.post_id }}" >Delete</button>
