--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -34,42 +34,21 @@
         <i class="bi bi-person-circle"></i>
         <span> {{ current_user.username }} </span>
         {% for message in get_flashed_messages() %}
-                {% if "Please" in message %}
+                {% if "There is" in message or "You are not" in message or "Please" in message %}
                     <div class="alert alert-warning alert-dismissible fade show alert-message" role="alert">
                         {{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 {% endif %}
             {% endfor %}
-        <form action="/comment" method="post">
+        <form action="/confirm-edit-comment" method="post">
             <input type="hidden" name="post_id" value="{{ post.post_id }}">
+            <input type="hidden" name="comment_id" value="{{ current_comment.comment_id }}">
             <div class="comment-text-btn">
-                <textarea name="comment-content" id="textcommentarea" placeholder="Type here" maxlength="255"></textarea>
+                <textarea name="comment-content" id="textcommentarea" placeholder="Type here" maxlength="255">{{ current_comment.content }}</textarea>
                 <span id="char-count">255 characters remaining</span>
-                <button type="submit" class="btn btn-primary btn-sm" id="comment-button">Comment</button>
+                <button name="confirm-edit-comment" type="submit" class="btn btn-danger btn-sm" id="edit-comment">Confirm Edit</button>
             </div>
-        </form>
-    </div>
-    <div class="comments">
-        <h5>Comments</h5>
-        {% for comment in comments %}
-            <div class="comment">
-                <i class="bi bi-person-circle"></i>
-                <span>{{ comment.author }} </span>
-                <span> {{ comment.datetime_posted }}</span>
-                <p>{{ comment.content }}</p>
-            </div>
-            {% if comment.comment_author_id == current_user.user_id %}
-                <form action="/edit-comment/{{ post.post_id }}/{{ comment.comment_id }}" method="get">
-                    <input type="hidden" name="post_id" value="{{ post.post_id }}">
-                    <button name="edit" type="submit" class="btn btn-danger btn-sm" id="edit-comment-button" value="{{ comment.comment_id }}">Edit</button>
-                </form>
-                <form action="/delete-comment" method="post">
-                    <input type="hidden" name="post_id" value="{{ post.post_id }}">
-                    <button name="delete" type="submit" class="btn btn-danger btn-sm" id="delete-button" value="{{ comment.comment_id }}" >Delete</button>
-                </form>
-            {% endif %}
-        {% endfor %}
     </div>
 
 
