--- a/static/style.css
+++ b/static/style.css
@@ -148,11 +148,48 @@ footer{
     bottom: 0;
     width: 100%;
 }
+/* Styling for the Sign in page */
+
+.signing-in{
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+}
+
+.username-cont{
+    position: relative;
+}
+
+.username-cont i{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+}
+
+.password-cont{
+    position: relative;
+}
+.password-cont i{
+    position: absolute;
+    top: 50%;
+    left:10px;
+    transform: translateY(-50%);
+}
+.form-control::placeholder{
+    text-indent:1px;
+}
+#username1, #password, #email, #confirm-password, #first-name, #last-name, #username{
+    padding-left: 30px;
+    border-radius: 10px;
+}
+
+
 
 /* Styling for the sign up page */
 .signup {
     font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
+    background-color: rgb(162,204, 215);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -160,12 +197,13 @@ footer{
     margin: 0;
 }
 .signup-container {
-    background-color: white;
+    background-color: var(--sidepanes);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    width: 300px;
+    width: 350px;
 }
+
 .signup-container h2 {
     text-align: center;
 }
@@ -180,16 +218,30 @@ footer{
     border: 1px solid #ddd;
 }
 .sign-up {
-    background-color: #0079d3;
+    background-color: rgb(52,119,141);
     color: white;
-    padding: 10px;
+    padding: 7px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
 }
 .sign-up:hover {
-    background-color: #0056a3;
+    background-color: rgb(23, 71, 87);
 }
+.labeling{
+    position: relative;
+}
+
+.labeling i{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+}
+
+
+
+
 
 /* for the posts */
 
