--- a/templates/users_posts.html
+++ b/templates/users_posts.html
@@ -1,7 +1,7 @@
 {% extends '_layout.html' %}
 
 {% block maincontent %}
-    <h1>Posts by {{ user.username }}</h1>
+    <h1 id="my_post_username">Posts by {{ user.username }}</h1>
 
     {% for post in user_posts %}
         
