--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,18 +3,54 @@
 {% block maincontent%}
     <div class="profile-bio">
         <i class="bi bi-person-circle"></i>
-        <div class="user-bio">
 
-            <h2>{{ current_user.first_name}} {{current_user.last_name}}</h2>
-            <h3>{{ current_user.concentration }}</h3>
+        <div class="user-bio">
+            <h2>{{ user.first_name }} {{ user.last_name}} </h2>
+            <h3>{{ user.concentration }} </h3>
 
         </div>
-        <form action="/edit-profile" method="get">
+        <form action="/settings-page" method="get">
             <button id="edit-profile-btn" type="submit">Edit Profile</button>
         </form>
+    </div>
+
+    <div class="profile-content">
+
+        {% for post in post %}
+        
+        <div class="post">
+            <div class="post-header">
+                <i class="bi bi-person-circle"></i>
+                <h6 class="poster">{{ post.author }}</h6>
+                <p class="post-date">{{ post.datetime_post }}</p>
+                {% if post.post_author_id == user.user_id %}
+                    <form action="/edit-post/{{ post.post_id }}" method="get">
+                        <input type="hidden" name="post_id" value="{{ post.post_id }}">
+                        <button type="submit" class="btn btn-danger btn-sm" id="edit-button">Edit</button>
+                    </form>
+                    <form action="/delete-post-from-myposts" method="post">
+                        <button name="delete" type="submit" class="btn btn-danger btn-sm" id="delete-button" value="{{ post.post_id }}" >Delete</button>
+                    </form>
+                {% endif %}
+            </div>
+            <div class="post-area">
+                <a href="/posts/{{ post.post_id }}" class="click-post">Click here to view the post</a>
+                <!-- <h3 class="post-title">{{ post.title }}</h3> -->
+                <p id="post-content">
+                    {{ post.post_content }}
+                </p>
+                <div class="post-btns">
+                    <i class="bi bi-heart"></i>
+                    <p>{{ post.num_likes }}</p>
+                    <i class="bi bi-chat-square-text"></i>
+                    <p>{{ post.num_comments }}</p>
+                    <i class="bi bi-share"></i>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
 
         
-
     </div>
 
 {% endblock %}
