adding concentration field html

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -49,6 +49,10 @@
                     <i class="bi bi-pencil-fill"></i>
                     <input type="text" class="form-control" id="last-name" name="last-name" placeholder="Last Name">
                 </div>
+                <div class="labeling">
+                    <i class="bi bi-backpack"></i>
+                    <input type="text" class="form-control" id="concentration" name="concentration" placeholder="Concentration">
+                </div>
 
                 <!-- <label for="username" class="form-label">Username</label> -->
                 {% for message in get_flashed_messages() %}
